# cardano-minter-plutus

./: .gitignore  hie.yaml  my-token.cabal  readme.md
app/: plutus-gift.hs  plutus-mint.hs  plutus-sale.hs
conf/: metadata.json
files/: minting-policy.id  minting-policy.plutus  minting.raw
src/: Gift.hs  Sale.hs  Token.hs
